--- a/index-webdav.html
+++ b/index-webdav.html
@@ -37,7 +37,8 @@
                 const credentials = promptForWebDAVCredentials();
 
                 if (credentials.username && credentials.password) {
-                    fetchWebDAVFolderData(targetDir, credentials)
+					const webDAVFolderURL = `${targetDir}filename.txt`;
+                    fetchWebDAVFolderData(webDAVFolderURL, credentials)
                         .then(response => response.text())
                         .then(data => processData(data))
                         .catch(error => console.error('Error fetching data:', error));
